{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 8,
  "lineage": "1fc857ee-a4d8-4761-bf71-530db3372413",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "main-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:178762446524:route-table/rtb-0f784c9c81da0f194",
            "default_route_table_id": "rtb-0f784c9c81da0f194",
            "id": "rtb-0f784c9c81da0f194",
            "owner_id": "178762446524",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ff8c60f4121e9fc1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-main-rtb"
            },
            "tags_all": {
              "Name": "dev-main-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7ebe318015356a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myapp-igw",
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:178762446524:security-group/sg-078ff0b9193e97cf1",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078ff0b9193e97cf1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "178762446524",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-sg"
            },
            "tags_all": {
              "Name": "dev-sg"
            },
            "vpc_id": "vpc-0e7ebe318015356a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myapp-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0464d49b8794eba32",
            "arn": "arn:aws:ec2:us-east-1:178762446524:instance/i-083206c66bc0ae58e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-083206c66bc0ae58e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myapp-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05b0a144a9446b600",
            "private_dns": "ip-10-0-10-69.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.69",
            "public_ip": "18.215.126.61",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02e3925560691403d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6eb2890a7be8d85",
            "tags": {
              "Name": "dev-server"
            },
            "tags_all": {
              "Name": "dev-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-078ff0b9193e97cf1"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default-sg",
            "aws_subnet.myapp-subnet-1",
            "aws_vpc.myapp-vpc",
            "data.aws_ami.latest-amazon-linux-image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myapp-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:178762446524:internet-gateway/igw-0ff8c60f4121e9fc1",
            "id": "igw-0ff8c60f4121e9fc1",
            "owner_id": "178762446524",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0e7ebe318015356a2"
          },
          "dependencies": [
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myapp-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:178762446524:subnet/subnet-0a6eb2890a7be8d85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6eb2890a7be8d85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "178762446524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-1"
            },
            "tags_all": {
              "Name": "dev-subnet-1"
            },
            "vpc_id": "vpc-0e7ebe318015356a2"
          },
          "dependencies": [
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myapp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:178762446524:vpc/vpc-0e7ebe318015356a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03fd79e29579711b2",
            "default_route_table_id": "rtb-0f784c9c81da0f194",
            "default_security_group_id": "sg-078ff0b9193e97cf1",
            "dhcp_options_id": "dopt-0e5733f009461598b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e7ebe318015356a2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f784c9c81da0f194",
            "owner_id": "178762446524",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}